# surfing

./: Cargo.toml  README.md
examples/: basic.rs  openai_json_extraction.rs  serde_integration.rs  simple.rs  stdout.rs  streaming.rs  streaming_serde.rs
src/: constants.rs  lib.rs
src/parser/: json_parser.rs  marker.rs  mod.rs
src/serde/: deserializer.rs  mod.rs  streaming_deserializer.rs
src/utils/: mod.rs  string_extract.rs
